--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,17 +1,5 @@
-{"properties": [
-  {
-    "name": "upload.path",
-    "type": "java.lang.String",
-    "description": "用户文件上传路径"
-  },
-  {
-    "name": "upload.clean-frequency",
-    "type": "java.lang.String",
-    "description": "临时文件清理周期"
-  },
-  {
-    "name": "upload.force-clean-threshold",
-    "type": "java.lang.String",
-    "description": "最大临时文件数量"
-  }
-]}
+{"properties": [{
+  "name": "upload.path",
+  "type": "java.lang.String",
+  "description": "存放用户上传的数据的路径"
+}]}
