--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,6 @@
 server:
   port: 8081
 
-
-
 spring:
   application:
     name: dsscm
@@ -17,6 +15,9 @@ mybatis:
   type-aliases-package: cn.dsscm.pojo,cn.dsscm.vo,cn.dsscm.dto
   configuration:
     map-underscore-to-camel-case: true
+
+pagehelper:
+  reasonable: true
 
 logging:
   file:
